--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@apollo/client": "^3.7.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.5",
     "@tanstack/react-query": "^4.22.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
     "react": "^18.2.0",
+    "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
+    "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.7.0",
     "ts-node": "^10.9.1"
   },
@@ -32,7 +35,6 @@
     "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
-    "react-credit-cards": "^0.8.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
