--- a/package.json
+++ b/package.json
@@ -8,29 +8,36 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "codegen": "graphql-codegen --config codegen.ts",
-    "graphql:codegen": "graphql-codegen --config codegen.yml"
+    "graphql:codegen": "graphql-codegen --config codegen.yml",
+    "homepage": "https://albertocevey.github.io/financeiro-graphql-react/"
   },
   "dependencies": {
     "@apollo/client": "^3.7.4",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@hookform/resolvers": "^2.9.10",
     "@mui/icons-material": "^5.11.0",
+    "@mui/lab": "^5.0.0-alpha.116",
     "@mui/material": "^5.11.5",
     "@tanstack/react-query": "^4.22.0",
     "graphql": "^16.6.0",
     "graphql-request": "^5.1.0",
+    "payment": "2.3.0",
     "react": "^18.2.0",
     "react-credit-cards": "^0.8.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.42.1",
     "react-pro-sidebar": "^1.0.0",
     "react-router-dom": "^6.7.0",
-    "ts-node": "^10.9.1"
+    "ts-node": "^10.9.1",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "2.16.4",
     "@graphql-codegen/client-preset": "1.2.6",
     "@graphql-codegen/introspection": "2.2.3",
     "@graphql-codegen/typescript-react-query": "^4.1.0",
+    "@types/payment": "^2.1.4",
     "@types/react": "^18.0.26",
     "@types/react-credit-cards": "^0.8.1",
     "@types/react-dom": "^18.0.9",
