--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "codegen": "graphql-codegen --config codegen.ts",
-    "graphql:codegen": "graphql-codegen --config codegen.yml",
-    "homepage": "https://albertocevey.github.io/financeiro-graphql-react/"
+    "graphql:codegen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
     "@apollo/client": "^3.7.4",
